# Harushion

./: .npmrc  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: update-cask.sh
src/: App.css  App.tsx  badge.ts  main.tsx  theme.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  db.rs  gh.rs  github.rs  graph.rs  lib.rs  main.rs  poller.rs  updater.rs
src/components/: DetailPane.tsx  EpicModal.css  EpicModal.tsx  EpicView.css  EpicView.tsx  GraphView.tsx  ItemList.tsx  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  StateBadge.test.ts  StateBadge.tsx  StreamModal.css  StreamModal.test.ts  StreamModal.tsx  format.test.ts  format.ts
src/i18n/: en.ts  i18n.test.ts  index.tsx  ja.ts  locale.ts
