[package]
name = "harushion"
version = "0.1.0"
description = "GitHub issue/PR watcher built with Tauri"
authors = ["sasagar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harushion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["process", "sync", "time", "io-util"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-clipboard-manager = "2.3.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

